--- a/asr_training/docker-compose.yml
+++ b/asr_training/docker-compose.yml
@@ -9,12 +9,16 @@ services:
       dockerfile: Dockerfile
     volumes:
       - /mnt/data2/projects/TALP/parl-20210719_segments/:/app/data/
-      - /mnt/data2/projects/TALP/asr_exp:/opt/kaldi/egs/oas/s5/exp
-      - /mnt/data2/projects/TALP/asr_data:/opt/kaldi/egs/oas/s5/data
+      - /mnt/data2/projects/TALP/asr_exp2:/opt/kaldi/egs/oas/s5/exp
+      - /mnt/data2/projects/TALP/asr_data2:/opt/kaldi/egs/oas/s5/data
     environment:
+      - METADATA_TRAIN=/app/data/metadata_train.csv
+      - METADATA_TEST=/app/data/metadata_test.csv
       - NJ_FEAT=10
       - NJ_TRAIN=5
-      - STAGE=9
+      - NJ_DECODE=5
+      - DO_DECODE=1
+      - STAGE=28
     deploy:
       resources:
         reservations:
