--- a/asr_training/docker-compose.yml
+++ b/asr_training/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - /mnt/data2/projects/TALP/parl-20210719_segments/:/app/data/
-      - /mnt/data2/projects/TALP/asr_exp2:/opt/kaldi/egs/oas/s5/exp
-      - /mnt/data2/projects/TALP/asr_data2:/opt/kaldi/egs/oas/s5/data
+      - /path/containing/metadata-csv-and-data/:/app/data/
+      - /output/path/models/:/opt/kaldi/egs/oas/s5/exp
+      - /output/path/kaldi-data-structures:/opt/kaldi/egs/oas/s5/data
     environment:
       - METADATA_TRAIN=/app/data/metadata_train.csv
       - METADATA_TEST=/app/data/metadata_test.csv
@@ -18,7 +18,7 @@ services:
       - NJ_TRAIN=5
       - NJ_DECODE=5
       - DO_DECODE=1
-      - STAGE=28
+      - STAGE=0
     deploy:
       resources:
         reservations:
